[package]
name = "transactions"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
csv = "1.3.1"
rust_decimal = { version = "1.37.1", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1.37.1"
anyhow = "1.0.98"
